[package]
name = "prisoner"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
clap = { version = "3.1.12", features = ["derive"] }
fake = "2.4"
prettytable-rs = "0.8.0"

[lib]
name = "prisoner"
path = "src/lib.rs"
