[package]
name = "prisoner"
authors = ["Ian Cullinane <ian@iancullinane.com>"]
description = "A library for simulating \"The Prisoner's Dilemna\""
version = "0.6.0"
homepage = "https://github.com/iancullinane/prisoner-rust"
repository = "https://github.com/iancullinane/prisoner-rust"
keywords = ["terminal","game", "simulation"]
readme = "README.md"
edition = "2018"
license = "MIT"
exclude = [
    "debug/",
    "Dockerfile*",
    ".vscode",
    "target/",
    ".rustc_info.json",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
clap = { version = "3.1.12", features = ["derive"] }
fake = "2.4"
tabled = "0.7.0"
block-id = "0.1.2"
