[package]
name = "prisoner-core"
authors = ["Ian Cullinane <ian@iancullinane.com>"]
description = "A library for simulating \"The Prisoner's Dilemna\""
version = "0.6.3"
homepage = "https://github.com/iancullinane/prisoner-rust"
repository = "https://github.com/iancullinane/prisoner-rust"
keywords = ["terminal","game", "simulation"]
readme = "README.md"
edition = "2021"
license = "MIT"
exclude = [
    "debug/",
    "Dockerfile*",
    ".vscode",
    "target/",
    ".rustc_info.json",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
strum = "0.25.0"
strum_macros = "0.25.3"
